Manually perform redaction to ensure backward compatibility
Change-Id: I961ff80833c4da6f879cfeafa2620ecfaa0e7e84